GNOME Bugzilla – Bug 733748
No accessible state-changed signals are emitted when the state of buttons in a document are toggled
Last modified: 2014-08-04 14:23:09 UTC
Created attachment 281703 [details] [review] proposed patch When the state of buttons is toggled, there is no accessible event notifying assistive technologies that the state has changed.
(In reply to comment #0) > Created an attachment (id=281703) [details] [review] > proposed patch Note that this patch might seem like overkill just for toggling buttons. But there are other instances where we will need to notify assistive technologies of state changes, and there may be multiple states that need to be updated at once for a given object.
Created attachment 282088 [details] [review] proposed patch Master-compatible version of the previous patch
Review of attachment 282088 [details] [review]: Ok.
Comment on attachment 282088 [details] [review] proposed patch https://git.gnome.org/browse/evince/commit/?id=4599025