libview/ev-form-field-accessible.h
@@ -52,5 +52,6 @@ EvFormFieldAccessible *ev_form_field_accessible_new (EvPageAccessible *page,
 						     EvFormField      *form_field,
 						     EvRectangle      *area);
 EvFormField           *ev_form_field_accessible_get_field (EvFormFieldAccessible *accessible);
+void                   ev_form_field_accessible_update_state (EvFormFieldAccessible *accessible);
 
 #endif  /* __EV_FORM_FIELD_ACCESSIBLE_H__ */
