libview/ev-page-accessible.h
@@ -53,6 +53,8 @@ EvViewAccessible *ev_page_accessible_get_view_accessible (EvPageAccessible *page
 EvView           *ev_page_accessible_get_view            (EvPageAccessible *page_accessible);
 AtkObject        *ev_page_accessible_get_accessible_for_mapping (EvPageAccessible *page_accessible,
 								 EvMapping        *mapping);
+void              ev_page_accessible_update_element_state (EvPageAccessible *page_accessible,
+							   EvMapping        *mapping);
 
 #endif  /* __EV_PAGE_ACCESSIBLE_H__ */
 
