libview/ev-view-accessible.h
@@ -68,6 +68,9 @@ gboolean  ev_view_accessible_is_doc_rect_showing (EvViewAccessible *accessible,
 void       ev_view_accessible_set_focused_element (EvViewAccessible *accessible,
 						   EvMapping        *new_focus,
 						   gint              new_focus_page);
+void       ev_view_accessible_update_element_state (EvViewAccessible *accessible,
+						    EvMapping        *element,
+						    gint              element_page);
 
 #endif  /* __EV_VIEW_ACCESSIBLE_H__ */
 
